--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/amit-playground-cy/my-app-lib.git"
   },
   "dependencies": {
-    "@amit-playground-cy/foo": "1.2.0"
+    "@amit-playground-cy/foo": "1.2.0",
+    "debug": "4.34"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
